# hooked-on-hooks

./: .gitignore  README.md  model-validation-sexy-again.html  model-validation-sexy-again.md  ngi-theme.css  oe-management-technical.html  oe-management-technical.md  slides.md  talk.md  template_presentation.html  template_presentation.md
.gtihub/workflows/: build-slides.yml
demo/: .pre-commit-config.yaml  README.md  pyproject.toml
demo/demo/: pre_commit_magic.py  pre_commit_magic_needed.py
demo/v1/: README.md  fast_api_example.py  model.py  pyproject.toml  validate_and_time.py
demo/v2/: README.md  bad_mypy.py  fast_api_example.py  model.py  model_optimized.py  model_typed_dict.py  model_typeddict_error.py  pyproject.toml  string_input_as_int.py  validate_and_time.py  validate_and_time_optimized.py
talk/: README.md  ngi-theme.css  slides.html  slides.md
