[tool.poetry]
name = "demo"
version = "0.1.0"
description = "Pre-commit demo"
authors = ["Sunniva Indrehus <sunniva.indrehus@gmail.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
