[tool.poetry]
name = "v1"
version = "0.1.0"
description = "Benchmark pydantic v1"
authors = ["s"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "1.10.12"
srsly = "^2.4.7"
codetiming = "^1.4.0"
mypy = "^1.5.1"
uvicorn = "^0.23.2"
fastapi = "^0.103.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"

[tool.mypy]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
