[tool.poetry]
name = "v2"
version = "0.1.0"
description = "Bench mark for pyddantic v2"
authors = ["Sunniva Indrehus <sunniva.indrehus@ngi.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.2.1"
codetiming = "^1.4.0"
srsly = "^2.4.7"
mypy = "^1.5.1"
uvicorn = "^0.23.2"
fastapi = "^0.103.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
